--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
 
   dio: ^5.4.3+1
 
+  #Animation
+  flutter_spinkit: ^5.2.1
+
+  #Google
+  url_launcher: ^6.2.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
