--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
 
   dio: ^5.4.3+1
 
+  #Cache
+  shared_preferences: ^2.2.3
+  flutter_secure_storage: ^9.0.0
+
   #Animation
   flutter_spinkit: ^5.2.1
 
