--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.android.application"
+    id "com.android.application" version "7.0.0"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
