--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.24.1 <4.0.0'
-  # sdk: '>=3.3.0 <4.0.0'
+  #sdk: '>=3.24.1 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,9 +35,12 @@ dependencies:
   dio: ^5.4.3+1
 
   #Cache
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.2
   flutter_secure_storage: ^9.0.0
 
+  #Core
+  equatable: ^2.0.5
+  
   #Animation
   flutter_spinkit: ^5.2.1
 
@@ -62,7 +65,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   build_runner: ^2.4.12
 
 # For information on the generic Dart part of this file, see the
