--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,11 @@ dependencies:
 
   #Core
   equatable: ^2.0.5
+  collection: ^1.18.0
   
   #Animation
   flutter_spinkit: ^5.2.1
+  lottie: ^3.1.2
 
   #States
   provider: ^6.1.2
@@ -83,6 +85,7 @@ flutter:
   assets:
     - assets/798898.png
     - assets/png/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
