--- a/ios/Runner/Base.lproj/Info.plist
+++ b/ios/Runner/Base.lproj/Info.plist
@@ -50,5 +50,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>We need to use your library flor sharing photo</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>we need your library to upload photos</string>
 </dict>
 </plist>
