--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,13 @@ dependencies:
 
   #States
   provider: ^6.1.2
+  flutter_mobx: ^2.2.1+1
 
   #Google
   url_launcher: ^6.2.6
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
+  image_picker: ^1.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,6 +71,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   build_runner: ^2.4.12
+  mobx_codegen: ^2.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
