--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.android.application" version "7.0.0"
+    id "com.android.application" version "8.1.4"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -64,4 +64,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.android.support:support-annotations:28.0.0'
+}
