--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,14 @@
+plugins {
+    id 'com.android.application' version '8.1.4' apply false
+
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
+
 }
 
 rootProject.buildDir = '../build'
@@ -16,3 +22,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
