--- a/ios/Runner/Base.lproj/Info.plist
+++ b/ios/Runner/Base.lproj/Info.plist
@@ -50,11 +50,24 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>We need to use your library flor sharing photo</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>we need your library to upload photos</string>
+    <key>NSCalendarsUsageDescription</key>
+          <string>$(PRODUCT_NAME) calendar events</string>
+        <key>NSRemindersUsageDescription</key>
+          <string>$(PRODUCT_NAME) reminder use</string>
+        <key>NSCameraUsageDescription</key>
+          <string>This app requires to access your photo library to show image on profile and send via chat</string>
+        <key>NSMicrophoneUsageDescription</key>
+          <string>This app requires to access your microphone to record video with your voice send via chat</string>
+        <key>NSPhotoLibraryUsageDescription</key>
+          <string>This app requires to access your photo library to show image on profile and send via chat</string>
+        <key>NSContactsUsageDescription</key>
+           <string>$(PRODUCT_NAME) contact use</string>
+        <key>NSLocationAlwaysUsageDescription</key>
+          <string>$(PRODUCT_NAME) location use</string>
+        <key>NSLocationWhenInUseUsageDescription</key>
+          <string>$(PRODUCT_NAME) location use</string>
 </dict>
 </plist>
+
