--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,15 @@ dependencies:
   #Cache
   shared_preferences: ^2.3.2
   flutter_secure_storage: ^9.0.0
+  vexana: ^5.0.1
 
   #Core
   equatable: ^2.0.5
   collection: ^1.18.0
-  
+
+  #Context
+  kartal: ^4.0.4
+
   #Animation
   flutter_spinkit: ^5.2.1
   lottie: ^3.1.2
@@ -72,6 +76,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   build_runner: ^2.4.12
   mobx_codegen: ^2.6.1
+  mockito: ^5.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
