--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -8,6 +8,13 @@
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
+# analyzer:
+# exclude:
+#   - "**/*.g.dart"
+#   # - "**/*.freezed.dart"
+#   - "test/.test_coverage.dart"
+#   - "bin/cache/**"
+#   - "lib/generated_plugin_registrans.dart"
 
 linter:
   # The lint rules applied to this project can be customized in the
