--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,13 @@ dependencies:
   flutter_spinkit: ^5.2.1
   lottie: ^3.1.2
 
+  #Localization
+  easy_localization: ^3.0.7
+
   #States
   provider: ^6.1.2
   flutter_mobx: ^2.2.1+1
+  flutter_bloc: ^8.1.6
 
   #Google
   url_launcher: ^6.2.6
@@ -63,6 +67,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +99,7 @@ flutter:
     - assets/798898.png
     - assets/png/
     - assets/lottie/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
